# sbus-experiments

./: .gitignore  Makefile  README.md  ablation_test.py  agent.py  agent_openai.py  analyze_workload_b.py  annotation_sample_annotator1_FILLED.csv  annotation_sample_annotator2_FILLED.csv  arsi_overrejection.py  arsi_real_llm_test.py  backbone_replication.py  benchmark.py  case_study.py  cf_interrater_annotation.py  cf_kappa.py  contention.py  convert_swebench.py  cross_shard_validation.py  data_reconciliation.py  deduplicate_sjv4.py  deliverylog_fp_experiment.py  diagnose_disagreements.py  domains.py  evaluate.py  exp_adversarial_rhidden_v2.py  exp_contention_scale.py  exp_dedicated_shard_semantic.py  exp_distributed.py  exp_i_fixed.py  exp_i_realistic_contention.py  exp_ori_isolation.py  exp_ori_isolation_fixed.py  exp_ori_isolation_v2.py  exp_pg_contention.py  exp_proxy_ph2.py  exp_proxy_ph2_haiku.py  exp_proxy_ph2_multibackbone.py  exp_semantic_judge.py  exp_semantic_judge_v2.py  (+57 more)
datasets/: long_horizon_tasks.json  tasks_30_multidomain.json
formal/: SBus_TLAPS.tla
results/: cross_shard_validation.csv  cwr_results.csv  deliverylog_fp_results.csv  kappa_results.json  pg_scr_contention.csv  pos_correlation_results.csv  real_sdk_results.csv  semantic_corruption_results_v3.csv  semantic_corruption_results_v4.csv  semantic_debug.csv  smoke.csv  smoke_test.csv  smoke_v2.csv  smoke_v3.csv  swebenches.csv  table11_full.csv  table11_no_both.csv  table11_no_log.csv  table11_no_token.csv  table11_no_version.csv  table3_autogen.csv  table3_crewai.csv  table3_langgraph.csv  (+5 more)
(+1 files in other folders)
