[project]
name = "agenticpaper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.7.5",
    "autogen-ext[openai]>=0.7.5",
    "crewai>=1.12.2",
    "httpx>=0.28.1",
    "langgraph>=1.1.3",
    "openai>=2.30.0",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "tiktoken>=0.12.0",
]
