[project]
name = "sbus_experiments"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.88.0",
    "autogen-agentchat>=0.7.5",
    "autogen-ext[openai]>=0.7.5",
    "crewai>=1.12.2",
    "datasets>=4.8.4",
    "fastapi>=0.135.3",
    "google-genai>=1.73.1",
    "groq>=1.1.2",
    "httpx>=0.28.1",
    "langgraph>=1.1.3",
    "litellm>=1.83.0",
    "mitmproxy>=12.2.1",
    "openai>=2.30.0",
    "pandas>=3.0.1",
    "protobuf>=5.29.6",
    "psycopg[binary]>=3.3.3",
    "redis[hiredis]>=7.4.0",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
    "swebench>=4.1.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.42.0",
]
